--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   db:
     container_name: 'local-wordpress-db'
     image: 'mysql:5.7'
-    volumes:
-      - './data/mysql:/var/lib/mysql'
+    # volumes:
+      # - './data/mysql:/var/lib/mysql'
     ports:
       - 13306:3306
     environment:
@@ -27,9 +27,6 @@ services:
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
-      XDEBUG_MODE: debug
-      XDEBUG_CONFIG: start_with_request=yes client_host=host.docker.internal client_port=9000
-      PHP_IDE_CONFIG: serverName=local
+      XDEBUG_CONFIG: 'client_host=host.docker.internal remote_enable=1'
     volumes:
       - "./wordpress:/var/www/html"
-      - "./plugins:/var/www/html/wp-content/plugins"
