--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   db:
     container_name: 'local-wordpress-db'
     image: 'mysql:5.7'
-    # volumes:
-      # - './data/mysql:/var/lib/mysql'
+    volumes:
+      - db_data:/var/lib/mysql
     ports:
       - 13306:3306
     environment:
@@ -23,14 +23,17 @@ services:
     ports:
       - '80:80'
     environment:
+      # HTTP_PROXY: "host.docker.internal:8080/"
+      # HTTPS_PROXY: "host.docker.internal:8080/"
       WORDPRESS_DB_HOST: 'db:3306'
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
-      CGP_API_ENDPOINT: 'http://dev.printerstudio.cn/cgp-rest'
-      CGP_API_USERNAME: 'ba_test@qpp.com'
-      CGP_API_PASSWORD: '123456'
-      CGP_API_PARTNERID: '856763'
+      # CGP_API_ENDPOINT: 'http://dev.printerstudio.cn/stage/cgp-rest'
+      # CGP_API_ENDPOINT: 'http://192.168.26.73/cgp-rest'
+      # CGP_API_USERNAME: 'timyeung11@qpp.com'
+      # CGP_API_PASSWORD: '1234567'
+      # CGP_API_PARTNERID: '18502641'
       WP_ENVIRONMENT_TYPE: 'local'
       XDEBUG_CONFIG: 'client_host=host.docker.internal remote_enable=1'
     volumes:
@@ -38,3 +41,5 @@ services:
       # plugin source code mapping
       # map plugin to container plugin folder
       - "./plugins/qp-fanny-bag:/var/www/html/wp-content/plugins/qp-fanny-bag"
+volumes:
+  db_data: {}
