--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,17 +29,12 @@ services:
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
-      # CGP_API_ENDPOINT: 'http://dev.printerstudio.cn/stage/cgp-rest'
-      # CGP_API_ENDPOINT: 'http://192.168.26.73/cgp-rest'
-      # CGP_API_USERNAME: 'timyeung11@qpp.com'
-      # CGP_API_PASSWORD: '1234567'
-      # CGP_API_PARTNERID: '18502641'
-      WP_ENVIRONMENT_TYPE: 'local'
+      # WP_ENVIRONMENT_TYPE: 'local'
       XDEBUG_CONFIG: 'client_host=host.docker.internal remote_enable=1'
     volumes:
       - "./wordpress:/var/www/html"
       # plugin source code mapping
       # map plugin to container plugin folder
-      - "./plugins/qp-fanny-bag:/var/www/html/wp-content/plugins/qp-fanny-bag"
+      - "./plugins/qp-market-network:/var/www/html/wp-content/plugins/qp-market-network"
 volumes:
   db_data: {}
