--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
+      WORDPRESS_DEBUG: 'true'
       # WP_ENVIRONMENT_TYPE: 'local'
       XDEBUG_CONFIG: 'client_host=host.docker.internal remote_enable=1'
     volumes:
